--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,12 @@ body {
 
   /* Position the receipt at the top left */
   #printable-receipt {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+    position: fixed !important;
+    left: 0 !important;
+    top: 0 !important;
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
     z-index: 9999;
     background-color: white;
   }
