--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,9 @@ body {
   #printable-products-list,
   #printable-products-list *,
   #printable-stock-list,
-  #printable-stock-list * {
+  #printable-stock-list *,
+  #printable-expenses-list,
+  #printable-expenses-list * {
     visibility: visible;
   }
 
@@ -40,7 +42,8 @@ body {
   #printable-receipt,
   #printable-invoice,
   #printable-products-list,
-  #printable-stock-list {
+  #printable-stock-list,
+  #printable-expenses-list {
     position: fixed !important;
     left: 0 !important;
     top: 0 !important;
